style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
body {
  display: inline;
  background: rgba(5, 24, 5, 0.664);
  margin: 0 auto;
  padding: 30px 0;
}
.Caps.active__Caps {
  background: red;
}

.Shift.active__shift {
  background: red;
}

#left {
  text-align: center;
  font-size: 12px;
  width: 910px;
  padding: 20px;
  margin: 20px auto;
  box-shadow: 0px 0px 10px 10px black;
  border-radius: 5px;
  background: rgba(5, 24, 5, 0.664);
}

.letters {
  width: 100%;
  height: 50px;
  max-width: 50px;
  display: inline-block;
  background: radial-gradient(rgb(146, 145, 196), rgb(58, 55, 88));
  text-align: center;
  border: 2px solid black;
  box-shadow: 2px 2px 5px black;
  border-radius: 5px;
  margin: 3px;
  padding: 0;
  opacity: 0.7;
}

.textArea {
  width: 100%;
  height: 50px;
  max-width: 900px;
  margin: 10px auto;
  background: rgba(167, 172, 167, 0.185);
  font-size: 20px;
  border: none;
}

.letters:hover {
  transition: linear 0.3s;
  color: #fff;
}

.Open {
  max-width: 83px;
  width: 100%;
}

.Caps {
  width: 100%;
  max-width: 100px;
}

.Back {
  width: 100%;
  max-width: 60px;
}

.F5,
.F9 {
  margin-left: 40px;
}

.Win,
.Alt,
.Ctrl {
  width: 100%;
  max-width: 75px;
}

.Enter {
  width: 100%;
  max-width: 120px;
}

.Space {
  width: 100%;
  max-width: 355px;
}

.Shift {
  width: 100%;
  max-width: 138px;
}

.Esc {
  margin-right: 50px;
}

.Tab {
  width: 100%;
  max-width: 80px;
}

.Esc,
.Shift,
.Tab,
.Enter,
.Ctrl,
.Alt,
.Win,
.Caps,
.Back,
.Space,
.Open {
  background: radial-gradient(white, rgb(58, 55, 88));
}

.F1,
.F2,
.F3,
.F4,
.F5,
.F6,
.F7,
.F8,
.F9,
.F10,
.F11,
.F12 {
  background: radial-gradient(white, rgb(58, 55, 88));
}

